corrected spacing

--- a/src/components/Carousel/Card.module.css
+++ b/src/components/Carousel/Card.module.css
@@ -10,9 +10,11 @@
     border-radius: 10px;
   }
 
+
+  
   @media screen and (max-width: 768px) {
     .card {
-      width: 15rem;
+      width: 20rem;
     }
     
   }
